adjusted top and width so it doesn't get cut off when nav bar is fixed

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,13 +1,19 @@
+/* Orange header with profile and name */
 header {
-  height: 400px;
+  height: 450px;
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   align-items: center;
   background-color: orange;
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
-  
 }
 
+.topHeader {
+  padding-top: 120px
+}
 
+/* The name displayed under big profile pic */
+.mainName{
+  margin-top: 0px
+}
